refactor(permission): 重构权限系统和审批流程